# pyweek34

./: .gitignore  FRAME.project  LICENSE.txt  README.md  heroImage.xcf  setup.cfg
outward/: main.py  requirements.txt  setup.cfg  setup.py  story.py
outward/ai/: opponent.py
outward/assets/: Army.bam  Factory.bam  Farm.bam  LivingQuarters.bam  Mine.bam  Shield.bam  Tower.bam  WaterRefinery.bam
outward/buildings/: buildingBase.py  buildings.csv  buildingsManager.py
outward/core/: config.py  coreFSM.py  coreGame.py
outward/economyStats/: economyDisplay.py  economyStats.py
outward/events/: eventBase.py  eventHandler.py  events.csv
outward/gui/: btnBuilding.py  mainView.py  startMenu.py
outward/scene/: scene.py
resources/: Army.blend  BuildingIcon.xcf  Button.xcf  Factory.blend  Farm.blend  Ground.blend  Living.blend  Living.blend11  Mine.blend  Preview.xcf  Shield.blend  StartMenu.gui  TheRedPlanet.ora  Tower.blend  WaterRefinery.blend  btnBuilding.gui  exportAll.sh  mainView.gui  project.logic  scene.scene  startMenu.logic
resources/warszawa/: SIL Open Font License.txt
