[metadata]
name = outward
author = GrimfangStudio
version = 22.09

[build_apps]
include_patterns = ../LICENSE.txt
	../README.md
	assets/*
	assets/**/*
	**/*.csv
gui_apps = outward=main.py
console_apps =
plugins = pandagl
	p3openal_audio
platforms = manylinux2010_x86_64
	macosx_10_9_x86_64
	win_amd64
icons = assets/gameicon/icon512.png
	assets/gameicon/icon256.png
	assets/gameicon/icon128.png
	assets/gameicon/icon48.png
	assets/gameicon/icon32.png
	assets/gameicon/icon16.png
build_base = ../deploy/build

[bdist_apps]
dist_dir = ../deploy/dist

